# eigen-js

./: .eslintrc  .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
css/: app.b83e74a8.css  chunk-vendors.cc11ba55.css
demo/: deploy.sh  package.json  vue.config.js
demo/public/: index.html
demo/src/: App.vue  main.js
demo/src/assets/: logo.ai
demo/src/components/: Class.vue  CodeArea.vue  Description.vue  Method.vue  Parameter.vue  TexDisplay.vue  Warning.vue  texUtils.js
demo/src/plugins/: codeMirror.js  vuetify.js
demo/src/router/: router.js
demo/src/views/: Benchmarks.vue  BenchmarksView.vue  DenseMatrix.vue  Documentation.vue  Home.vue
docs/: doc.json  doc.md
eigen-js/: .eslintrc  doctest.js  eigen.js  eigen_gen.js  eigen_gen.wasm  hashmap.js
example/: test.mjs
js/: app.135b7797.js  app.135b7797.js.map  chunk-vendors.2ef1a1e7.js
src/: CareSolver.h  Decompositions.h  DenseMatrix.h  GC.js  GC.mjs  QuadProgSolver.h  Solvers.h  SparseMatrix.h  eigen.d.ts  eigen.js  eigen.mjs  eigenTest.js  eigenTest.mjs  eigenTest.ts  embind.cc  pre.js  test.tex
src/classes/: Decompositions.js  Matrix.js  Solvers.js
src/cpp/: CareSolver.h  DenseMatrix.h  QuadProgOld.h  Random.h  SimplicialCholesky.h  Solvers.h  SparseMatrix.h  embind.cc
src/cpp/contrib/: multivariateNormal.h
src/tests/cpp/: CMakeLists.txt  benchmark.cpp
src/tests/cpp/simplicialcholesky/: Tutorial_sparse_example.cpp  Tutorial_sparse_example_details.hpp
src/tests/ts/: benchmark.test.ts  readme.md  types.ts  utils.ts
(+6 files in other folders)
